# app/Http/Controllers/Admin/CompanyController.php
@@ -8,6 +8,15 @@ use Illuminate\Http\Request;
 
 class CompanyController extends Controller
 {
+    /**
+     * @OA\Get(
+     *     path="/api/public/companys",
+     *     description="Description api company",
+     *     tags={"Company"},
+     *     @OA\Response(response="200", description="{ status: true , data : data }"),
+     *     @OA\Response(response="404", description="{ status: false , message : 'Not found' }")
+     * )
+     */
     public function listCompany()
     {
         $dataCompany = Company::all();
